--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -45,7 +45,7 @@
       <div class="ingredient-group" id="cheese">
         <h3>Pick your cheese:</h3>
         <div th:each="ingredient : ${cheese}">
-          <input th:field="*{ingredients}" type="checkbox"
+          <input type="checkbox"
                  th:value="${ingredient.id}"/>
           <span th:text="${ingredient.name}">INGREDIENT</span><br/>
         </div>
@@ -55,7 +55,7 @@
       <div class="ingredient-group" id="veggies">
         <h3>Pick your veggies:</h3>
         <div th:each="ingredient : ${veggies}">
-          <input th:field="*{ingredients}" type="checkbox"
+          <input th:field="${taco.ingredients}" type="checkbox"
                  th:value="${ingredient.id}"/>
           <span th:text="${ingredient.name}">INGREDIENT</span><br/>
 
