--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Taco Cloud</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Welcome to...</h1>
-    <img th:src="@{/images/taco.png}" alt="taco images"/>
+<h1>Welcome to...</h1>
+<img th:src="@{/images/taco.png}" alt="taco images"/>
 </body>
 </html>
