Validation and start page are added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 <h1>Welcome to...</h1>
-<img th:src="@{/images/taco.png}" alt="taco images"/>
+
+    <a th:href="@{/design}">
+        <img th:src="@{/images/taco.png}" alt="taco images" class="w-50"/>
+    </a>
 </body>
 </html>
