--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -29,7 +29,11 @@
 
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
 
+
             </div>
+            <span class="text-danger"
+                  th:if="${#fields.hasErrors('ingredients')}"
+                  th:errors="*{ingredients}">Ingredient error</span>
 
         </div>
 
@@ -44,6 +48,9 @@
                 <span th:text="${ingredient.name}">INGREDIENT</span> <br/>
 
             </div>
+            <span class="text-danger"
+                  th:if="${#fields.hasErrors('ingredients')}"
+                  th:errors="*{ingredients}">Ingredient error</span>
 
         </div>
 
@@ -54,6 +61,9 @@
                        th:value="${ingredient.id}"/>
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
+            <span class="text-danger"
+                  th:if="${#fields.hasErrors('ingredients')}"
+                  th:errors="*{ingredients}">Ingredient error</span>
 
         </div>
 
@@ -65,6 +75,9 @@
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
 
             </div>
+            <span class="text-danger"
+                  th:if="${#fields.hasErrors('ingredients')}"
+                  th:errors="*{ingredients}">Ingredient error</span>
 
         </div>
 
@@ -77,12 +90,21 @@
             </div>
 
         </div>
+        <span class="text-danger"
+              th:if="${#fields.hasErrors('ingredients')}"
+              th:errors="*{ingredients}">Ingredient error</span>
 
     </div>
 
     <div class="col-12 text-center">
         <h3>Name your taco creation:</h3>
         <input type="text" th:field="*{name}"/>
+
+        <br/>
+
+        <span class="text-danger bg-dark"
+              th:if="${#fields.hasErrors('name')}"
+              th:errors="*{name}">taco name</span>
         <br/>
 
         <button class="btn btn-secondary">Submit Your Taco</button>
