--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -34,6 +34,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{deliveryName}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('deliveryName')}"
+                              th:errors="*{deliveryName}">deliveryName Error</span>
                     </td>
                 </tr>
                 <tr>
@@ -42,6 +45,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{deliveryStreet}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('deliveryStreet')}"
+                              th:errors="*{deliveryStreet}">Delivery Street Error</span>
                     </td>
                 </tr>
                 <tr>
@@ -50,6 +56,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{deliveryCity}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('deliveryCity')}"
+                              th:errors="*{deliveryCity}">Delivery City Error</span>
                     </td>
                 </tr>
                 <tr>
@@ -58,6 +67,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{deliveryState}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('deliveryState')}"
+                              th:errors="*{deliveryState}">Delivery State Error</span>
                     </td>
                 </tr>
                 <tr>
@@ -66,6 +78,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{deliveryZip}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('deliveryZip')}"
+                              th:errors="*{deliveryZip}">Delivery Zip Error</span>
                     </td>
                 </tr>
             </table>
@@ -82,6 +97,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{ccNumber}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('ccNumber')}"
+                              th:errors="*{ccNumber}">ccNumber Error</span>
                     </td>
                 </tr>
                 <tr>
@@ -90,6 +108,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{ccExpiration}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('ccExpiration')}"
+                              th:errors="*{ccExpiration}">ccExpiration Error</span>
                     </td>
                 </tr>
                 <tr>
@@ -98,6 +119,9 @@
                     </td>
                     <td>
                         <input type="text" th:field="*{ccCVV}"/>
+                        <span class="text-danger"
+                              th:if="${#fields.hasErrors('ccCVV')}"
+                              th:errors="*{ccCVV}">ccCVV Error</span>
                     </td>
                 </tr>
             </table>
