--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,10 +10,12 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>Welcome to...</h1>
+    <h1>Welcome to...</h1>
+    <a th:href="@{/h2-console}" class="btn btn-warning">H2-Console</a><br/>
+
 
     <a th:href="@{/design}">
-        <img th:src="@{/images/taco.png}" alt="taco images" class="w-50"/>
+        <img th:src="@{/images/taco.png}" alt="taco images" class="w-25"/>
     </a>
 </body>
 </html>
